@@ -1,3 +1,8 @@
+2002-02-25  Sam Steingold  <sds@gnu.org>
+
+	* clhs.lisp (clhs): unlock COMMON-LISP before reading clhs-file
+	(read-from-file): added PACKAGE keyword argument
+
 2002-02-23  Sam Steingold  <sds@gnu.org>
 
 	minor code cleanups
